// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoundCloud Track Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  />
</DocumentFragment>
`;

exports[`SoundCloud Track Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0"
  />
</DocumentFragment>
`;
